# aurex16pp

./: .gitignore  ARCH_INDEX.md  Cargo.toml  README_AGENT_CONSOLE.md  SPEC.md  build.rs  cartridges.patch  full_pub_snapshot.txt  plan.md  run_log.txt  symbol_snapshot.txt
cartridges/chrome_duo_boot/: manifest.txt
data/cartridges/blocks_and_bricks/: cartridge.json
docs/: ai_handoff.md  ai_handoff_03-02-26.md  ai_handoff_2026-03-08_runtime_av_stage3.md  ai_handoff_canon.md  ai_handoff_history.md  arch_index.md  architecture.md  aurex16pp_agent_console_plan.md  aurex_vs_neo_geo.md  binary_asset_recreation_guide.md  boot_library_upgrade.md  dev_log.md  human_game_creation_guide.md  llm_prompt_template.md  llm_sdk_guide.md  master_prompt.md  structural_contract.md  symbol_registry.md  tech_spec_report.md  test_log.md
scripts/: preflight.sh  setup.sh  start-dashboard.sh
src/: agent_session.rs  headless.rs  main.rs  recorder.rs
src/aurex/: clock.rs  mod.rs  pdu.rs  wram.rs
src/aurex/boot/: mod.rs  prime_awakens.rs  prime_ignition.rs  render_probe.rs
src/aurex/cartridge/: mod.rs
src/aurex/dma/: command.rs  controller.rs
src/aurex/game/: blocks_and_bricks.rs  library.rs  mod.rs  tech_demo.rs
src/aurex/ppu/: debug_draw.rs  framebuffer.rs  mod.rs  oam.rs  ppu.rs  vram.rs
src/aurex/runtime/: audio.rs  event.rs  flow.rs  frame_pacer.rs  game_runtime.rs  input.rs  launch.rs  mod.rs  render.rs  replay.rs
src/aurex/vm32/: core.rs  mod.rs
src/cart/: render_probe.rs
src/server/: api.rs  db.rs  mod.rs
